# chirpy

./: .env.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.api.json  tsconfig.base.json  vercel.json  vitest.config.ts
.github/workflows/: apple-validation.yml  release.yml  test.yml  xmtp-nightly.yml
api/: health.js  ops-utils.js  package.json  room-join.js  server-utils.js  usersync.js  workflow-event.js
api/test/: ops-monitoring.test.ts
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: App.tsx  ErrorBoundary.tsx  app.config.ts  ens.ts  main.tsx  presets.ts  state.tsx  styles.css  ui.tsx  update.ts  useEns.ts  userSync.ts  walletProviders.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json  desktop.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src/i18n/: index.tsx
apps/web/test/: userSync.test.ts  walletconnectDeeplink.test.ts
docs/: ARCHITECTURE.md  NATIVE.md  ORG-CONFIGS.md  PLAN.md  PRODUCTION.md  RESEARCH-parley-chat.md  ROADMAP.md  ROLLOUT-RUNBOOK.md
examples/: bittrees-inc.org.json  bittrees-research.org.json
scripts/: rollout-proof.mjs
selfhost/: DEPLOY.md  README.md  docker-compose.yml  fly.toml  gate-server.mjs  gate.Dockerfile  gate.env.example  gate.package.json  gen-gatekeeper-key.mjs  install.sh
tests/e2e/: mock-flow.spec.ts  xmtp-dm.spec.ts  xmtp-smoke.spec.ts
tests/e2e/fixtures/: wallet.ts
(+7 files in other folders)
