[package]
name = "chirpy"
version = "0.1.0"
description = "Chirpy — wallet-native chat for any community"
authors = ["Bittrees Technology"]
edition = "2021"
rust-version = "1.77"

[lib]
# The shared library that both the desktop binary and the mobile entrypoints use.
name = "chirpy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auto-update is a desktop-only feature (iOS/Android update via their app stores),
# so the updater + process plugins are gated to non-mobile targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
